Funcionalidad productos lista

--- a/src/views/admin/product/edit.html
+++ b/src/views/admin/product/edit.html
@@ -15,7 +15,7 @@
         <div class="card-header">
             <h3 class="card-title">Informacion</h3>
         </div>
-        <form action="/admin/products/<%= product._id %>?_method=PUT" method="POST">
+        <form action="/admin/products/<%= product.id %>?_method=PUT" method="POST">
             <input type="hidden" name="_method" value="PUT">
             <div class="card-body row">
                 <div class="col-12">
