--- a/src/views/admin/partials/messages.html
+++ b/src/views/admin/partials/messages.html
@@ -1,8 +1,8 @@
 <div class="container pt-2">
-    <% if (success_msg.length > 0) { %>
+    <% if (success.length > 0) { %>
     <div class="alert alert-success alert-dismissible">
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-        <%= success_msg %>
+        <%= success %>
     </div>
     <% }  %>
 
