--- a/src/views/pages/contact.html
+++ b/src/views/pages/contact.html
@@ -62,7 +62,7 @@
             </div>
             <div class="col-12">
 
-                <button id="buttonSubmit" class="btn btn-block btn-success mt-4">Enviar mensaje</button>
+                <button id="buttonSubmit" class="btn btn-block btn-primary mt-4">Enviar mensaje</button>
             </div>
         </div>
     </form>
