--- a/src/views/admin/user/list.html
+++ b/src/views/admin/user/list.html
@@ -6,7 +6,7 @@
             <div class="col-12 d-flex align-items-center justify-content-between">
                 <h1>Usuarios</h1>
                 <% if(user.role ==='ADMIN_ROLE'){ %>
-                <a href="/admin/userbds/create" class="btn btn-primary"><i class="fas fa-plus mr-2"></i>Agregar</a>
+                <a href="/admin/users/create" class="btn btn-primary"><i class="fas fa-plus mr-2"></i>Agregar</a>
                 <%} %>
             </div>
         </div>
