--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -1,14 +1,12 @@
-<div class="bg-primary text-white text-center p-5 mt-4">
+<div class="bg-dark text-white text-center p-5 mt-4">
     <h3>¿Quieres realizar un pedido? Hablemos</h3>
     <div class="d-flex justify-content-center flex-column flex-md-row mt-4">
         <a href="https://api.whatsapp.com/send?phone=56982175420" target="_blank" class="btn btn-outline-light m-2"><i
                 class="fab fa-whatsapp mr-2"></i>+569 8217 5420</a>
-        <a href="/contact" class="btn btn-outline-light m-2"><i class="far fa-envelope mr-2"></i></i>Enviar
-            mensaje</a>
     </div>
 </div>
 
-<footer class="text-center bg-primary text-light py-3 px-4 border-top">
+<footer class="text-center bg-dark text-light py-3 px-4 border-top">
     DOS ALAMOS &copy; Todos los derechos reservados 2020
 </footer>
 
