--- a/src/views/moderator/products/create.html
+++ b/src/views/moderator/products/create.html
@@ -15,20 +15,24 @@
         <div class="card-header">
             <h3 class="card-title">Informacion</h3>
         </div>
-        <form action="/admin/products" method="POST">
+        <form action="/moderator/products" method="POST">
             <div class="card-body row">
                 <div class="col-12">
                     <div class="form-group">
-                        <label for="name">Nombre</label>
+                        <label for="name">Nombre (*)</label>
                         <input type="text" class="form-control" name="name" id="name" required>
                     </div>
                     <div class="form-group">
-                        <label for="description">Descripcion</label>
+                        <label for="description">Descripcion (*)</label>
                         <textarea name="description" id="description" rows="3" class="form-control" required></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="price">Precio (CLP)</label>
+                        <label for="price">Precio (CLP) (*)</label>
                         <input type="number" class="form-control" name="price" id="price" required min="0">
+                    </div>
+                    <div class="form-group">
+                        <label for="stock">Stock</label>
+                        <input type="number" class="form-control" name="stock" id="stock" required value="0" min="0">
                     </div>
                 </div>
 
