--- a/src/views/pages/home.html
+++ b/src/views/pages/home.html
@@ -10,29 +10,18 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://i.pinimg.com/originals/73/1b/a5/731ba5d65364d8828e9489e4970ec9fb.jpg"
-                class="d-block w-100" alt="">
+            <img src="https://wallpaperaccess.com/full/85814.jpg" class="d-block w-100" alt="">
             <div class="carousel-caption">
-                <h5 class="h2">Productos frescos y de primera</h5>
+                <h5 class="h2">Los mejores articulos electronicos</h5>
                 <p>Si no nos crees, pruebalos tu mismo.</p>
-                <a href="/product" class="btn btn-outline-light w-50 mx-auto">Ver productos</a>
+                <a href="/products" class="btn btn-outline-light w-50 mx-auto">Ver productos</a>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="https://us.emedemujer.com/wp-content/uploads/sites/3/2017/04/limpieza-muebles-de-madera.jpg"
-                class="d-block w-100" alt="...">
+            <img src="https://wallpaperaccess.com/full/742106.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
-                <h5 class="h2">Las mejores frutas y verduras de todo el mundo</h5>
+                <h5 class="h2">Todo lo mejor del mundo en un solo lugar</h5>
                 <p>Conocenos, no te arrepentiras</p>
-                <a href="/contact" class="btn btn-outline-light w-50 mx-auto">Enviar mensaje</a>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="https://www.wallpaperup.com/uploads/wallpapers/2015/03/22/643401/916f5709dee261317fb4547d21579ced-700.jpg"
-                class="d-block w-100" alt="...">
-            <div class="carousel-caption">
-                <h5 class="h2">Recetas de primera con nuestros productos</h5>
-                <p>Dale otra vida a tus recetas con estas frutas y verduras que tenemos para ti.</p>
             </div>
         </div>
     </div>
@@ -53,7 +42,7 @@
     <div class="row">
         <% lastProducts.forEach((product) => { %>
         <div class="col-6 col-md-4 mb-3 p-1">
-            <a href="/product/<%= product.id %>" class="card rounded-lg">
+            <a href="/products/<%= product.id %>" class="card rounded-lg">
                 <div class="imagen-rectangular">
                     <img src="/img/products/<%= product.photo_url %>" class="card-img-top rounded-lg" alt="...">
                 </div>
@@ -73,7 +62,7 @@
         <% }) %>
     </div>
     <div class="w-100 text-center mt-3 mb-5">
-        <a href="/product" class="btn btn-primary mx-auto">Ver todos los productos</a>
+        <a href="/products" class="btn btn-dark mx-auto">Ver todos los productos</a>
     </div>
 </div>
 
